--- a/meilisearch-release-changelogs/v0.28.0.md
+++ b/meilisearch-release-changelogs/v0.28.0.md
@@ -112,7 +112,7 @@ Done by @MarinPostma in #2410
 ### Changes in `/keys` endpoint
 
 - Regarding the tenant token: `apiKeyPrefix` is renamed `apiKeyUid`
-- Once a key is created, you cannot update `actions`, `indexes`, `expireAt` anymore. Only the `name` and `description` fields are updatable. You can delete and re-create the key if needed.
+- It is no longer possible to update `actions`, `indexes`, or `expiresAt` after key creation. Only the `name` and `description` fields are updatable.
 - When getting the key list (`GET /keys`), the keys are now paginated. It means:
   - You can use the `offset` and `limit` parameters to browse the indexes.
   - The keys are still returned in the `result` field in the response body.
