--- a/meilisearch-release-changelogs/v0.28.0.md
+++ b/meilisearch-release-changelogs/v0.28.0.md
@@ -113,7 +113,7 @@ Done by @MarinPostma in #2410
 
 - Regarding the tenant token: `apiKeyPrefix` is renamed `apiKeyUid`
 - It is no longer possible to update `actions`, `indexes`, or `expiresAt` after key creation. Only the `name` and `description` fields are updatable.
-- When getting the key list (`GET /keys`), the keys are now paginated. It means:
+- When getting the keys list (`GET /keys`), the response is now paginated. That means:
   - You can use the `offset` and `limit` parameters to browse the indexes.
   - The keys are still returned in the `result` field in the response body.
   - The `limit`, `offset`, and `total` are available in the response body.
