--- a/meilisearch-release-changelogs/v0.28.0.md
+++ b/meilisearch-release-changelogs/v0.28.0.md
@@ -115,7 +115,7 @@ Done by @MarinPostma in #2410
 - It is no longer possible to update `actions`, `indexes`, or `expiresAt` after key creation. Only the `name` and `description` fields are updatable.
 - When getting the keys list (`GET /keys`), the response is now paginated. That means:
   - You can use the `offset` and `limit` parameters to browse keys.
-  - The `limit`, `offset`, and `total` are available in the response body.
+  - `limit`, `offset`, and `total` now appear in the response body.
 - Due to all the changes on the `keys` resources, the dump's compatibility is not full with API keys. It means the keys created with an old version of Meilisearch will be imported with the same `actions` and `indexes` values, but the `key` and `uid` fields will be regenerated. You will need to update your keys.
 - The `dumps.get` action is removed.
 
