--- a/meilisearch-release-changelogs/v0.28.0.md
+++ b/meilisearch-release-changelogs/v0.28.0.md
@@ -111,7 +111,7 @@ Done by @MarinPostma in #2410
 
 ### Changes in `/keys` endpoint
 
-- Regarding the tenant token: `apiKeyPrefix` is renamed `apiKeyUid`
+- Tenant tokens: `apiKeyPrefix` has been renamed `apiKeyUid`.
 - It is no longer possible to update `actions`, `indexes`, or `expiresAt` after key creation. Only the `name` and `description` fields are updatable.
 - When getting the keys list (`GET /keys`), the response is now paginated. That means:
   - You can use the `offset` and `limit` parameters to browse keys.
