--- a/meilisearch-release-changelogs/v0.28.0.md
+++ b/meilisearch-release-changelogs/v0.28.0.md
@@ -116,7 +116,7 @@ Done by @MarinPostma in #2410
 - When getting the keys list (`GET /keys`), the response is now paginated. That means:
   - You can use the `offset` and `limit` parameters to browse keys.
   - `limit`, `offset`, and `total` now appear in the response body.
-- Due to all the changes on the `keys` resources, the dump's compatibility is not full with API keys. It means the keys created with an old version of Meilisearch will be imported with the same `actions` and `indexes` values, but the `key` and `uid` fields will be regenerated. You will need to update your keys.
+- Due to changes to the `keys` resource, dumps are not fully compatible with API keys. As a result, keys imported from an old version of Meilisearch will have their `key` and `uid` fields regenerated. In other words, **you will need to update your keys**. Other key fields such as `actions` and `indexes` will not be affected.
 - The `dumps.get` action is removed.
 
 Done by @ManyTheFish in #2438, #2451, #2475, and #2474)
