--- a/meilisearch-release-changelogs/v0.28.0.md
+++ b/meilisearch-release-changelogs/v0.28.0.md
@@ -123,7 +123,7 @@ Done by @ManyTheFish in #2438, #2451, #2475, and #2474)
 
 ### Changes in `/indexes/{uid}/settings` endpoints
 
-The changes only concern the HTTP methods
+The following changes only concern the HTTP verb associated with a given method.
 
 - The endpoint to update the global settings is now `PATCH /indexes/{indexUid}/settings`  instead of `POST`
 - The endpoint to update the typo-tolerance settings is now `PATCH /indexes/{indexUid}/settings/typo-tolerance`  instead of `POST`
