--- a/meilisearch-release-changelogs/v0.28.0.md
+++ b/meilisearch-release-changelogs/v0.28.0.md
@@ -126,7 +126,7 @@ Done by @ManyTheFish in #2438, #2451, #2475, and #2474)
 The following changes only concern the HTTP verb associated with a given method.
 
 - The endpoint to update the global settings is now `PATCH /indexes/{indexUid}/settings`  instead of `POST`
-- The endpoint to update the typo-tolerance settings is now `PATCH /indexes/{indexUid}/settings/typo-tolerance`  instead of `POST`
+- The endpoint to update the typo tolerance settings is now `PATCH /indexes/{indexUid}/settings/typo-tolerance`  instead of `POST`
 - The endpoint to update the displayed attributes settings is now `PUT /indexes/{indexUid}/settings/displayed-attributes`  instead of `POST`
 - The endpoint to update the distinct attribute settings is now `PUT /indexes/{indexUid}/settings/distinct-attribute`  instead of `POST`
 - The endpoint to update the filterable attribute settings is now `PUT /indexes/{indexUid}/settings/filterable-attributes`  instead of `POST`
