--- a/meilisearch-release-changelogs/v0.28.0.md
+++ b/meilisearch-release-changelogs/v0.28.0.md
@@ -133,7 +133,7 @@ The following changes only concern the HTTP verb associated with a given method.
 - The endpoint to update the ranking rules settings is now `PUT /indexes/{indexUid}/settings/ranking-rules`  instead of `POST`
 - The endpoint to update the searchable attributes settings is now `PUT /indexes/{indexUid}/settings/searchable-attributes`  instead of `POST`
 - The endpoint to update the sortable attributes settings is now `PUT /indexes/{indexUid}/settings/sortable-attributes`  instead of `POST`
-- The endpoint to update the stop-words settings is now `PUT /indexes/{indexUid}/settings/stop-words`  instead of `POST`
+- The endpoint to update the stop words settings is now `PUT /indexes/{indexUid}/settings/stop-words`  instead of `POST`
 - The endpoint to update the synonyms settings is now `PUT /indexes/{indexUid}/settings/synonyms`  instead of `POST`
 
 Done by @Kerollmops in #2452
