--- a/meilisearch-release-changelogs/v0.28.0.md
+++ b/meilisearch-release-changelogs/v0.28.0.md
@@ -147,7 +147,7 @@ Done by Kerollmops in #2468 and meilisearch/milli#535
 
 # Other improvements 🔨
 
-- Geo-search: Support string type for `_geo` `lat` and `lng` fields (#2408 and meilisearch/milli#523) @irevoire
+- Geosearch: Support string type for `_geo`, `lat`, and `lng` fields (#2408 and meilisearch/milli#523) @irevoire
 - Improve ranking rules error message (meilisearch/milli#536, #2468) @matthias-wright
 - Remove the connection keep-alive timeout (#2471) @Thearas
 
