Remove extra spaces

--- a/meilisearch-release-changelogs/v0.28.0.md
+++ b/meilisearch-release-changelogs/v0.28.0.md
@@ -7,9 +7,9 @@ This release introduces a lot of breaking changes (especially regarding names), 
 <!-- The following line should NOT be put in the official release changelogs -->
 ⚠️ Since this is a release candidate (RC), the official documentation is not updated yet, but will be ready for the official v0.28.0 release. The work-in-progress documentation is available [here]().
 
-## New features 🚀
+# New features 🚀
 
-### Smart crop
+## Smart crop
 
 The smart crop is an improvement of the Meilisearch crop.
 
@@ -17,7 +17,7 @@ The cropping algorithm tries to find the window(s) with the highest density of q
 
 Done by @ManyTheFish (#2408)
 
-### API key management: deterministic keys
+## API key management: deterministic keys
 
 - It is now possible to create a deterministic `key` value by specifying a `uid` field at creation. `uid` is a `uuidv4`. If omitted, Meilisearch generates it.
 - Adds a `name` field: specify a human-readable `name` to make API key retrieval more convenient.
@@ -26,13 +26,13 @@ Done by @ManyTheFish (#2408)
 
 Done by @ManyTheFish in #2438, #2451, #2475, and #2474)
 
-### Hebrew language support
+## Hebrew language support
 
 New language support: Hebrew, using the [Niqqud library](https://github.com/benny-n/niqqud).
 
 Done by the amazing @benny-n in meilisearch/charabia#101.
 
-### New tokenizer contribution experience: add your language to Meilisearch
+## New tokenizer contribution experience: add your language to Meilisearch
 
 The contribution experience in the tokenizer has been significantly improved.
 
@@ -47,7 +47,7 @@ Done by @ManyTheFish, @loiclec @gmourier, and @curquiza.
 <!-- The following line should only be put in the official release changelogs, not for the RC -->
 For most of the following changes, if you use [one of our SDKs](https://docs.meilisearch.com/learn/what_is_meilisearch/sdks.html), these changes will be transparent for you by only updating to the latest version of the SDK.
 
-### Changes in `/indexes/{uid}/search` endpoint
+## Changes in `/indexes/{uid}/search` endpoint
 
 - `nbHits` is renamed `estimatedNbHits`. Some users were confused by the old name and used it for their pagination, which we discourage. Please check out this [fresh new guide]() to learn how to paginate with Meilisearch without using `nbHits`.
 - The `facetsDistribution` search parameter is renamed `facets`
@@ -58,7 +58,7 @@ For most of the following changes, if you use [one of our SDKs](https://docs.mei
 
 Done by @irevoire in #2406.
 
-### Changes in `/indexes` endpoints
+## Changes in `/indexes` endpoints
 
 - When getting the index list (`GET /indexes`), the response is now paginated. That means:
   - You can use the `offset` and `limit` parameters to browse indexes.
@@ -69,7 +69,7 @@ Done by @irevoire in #2406.
 
 Done by @irevoire and @Kerollmops in #2423, #2452, and #2454.
 
-### Changes in `indexes/{uid}/documents` endpoints
+## Changes in `indexes/{uid}/documents` endpoints
 
 - When getting the documents list (`GET /indexes/{uid}/documents`), pagination has been improved. That means:
   - You can still use the `offset` and `limit` parameters to browse documents.
@@ -81,7 +81,7 @@ Done by @irevoire and @Kerollmops in #2423, #2452, and #2454.
 
 Done by @irevoire in #2372, #2433, and #2454.
 
-### Changes in `/tasks` and `/indexes/{uid}/tasks` endpoints
+## Changes in `/tasks` and `/indexes/{uid}/tasks` endpoints
 
 - You can now filter on the `GET /tasks` endpoint:
   - Filtering is possible on the `type`, `status`, and `indexUid` fields.
@@ -100,7 +100,7 @@ Done by @irevoire in #2372, #2433, and #2454.
 
 Done by Kerollmops in #2399 and #2445.
 
-### Changes regarding dumps
+## Changes regarding dumps
 
 - Dump creation is now an asynchronous task. Dump tasks are placed at the end of the task queue but are processed in priority.
 - `POST /dumps` now returns `202` like any other asynchronous operation (e.g. index creation, document addition...
@@ -109,7 +109,7 @@ Done by Kerollmops in #2399 and #2445.
 
 Done by @MarinPostma in #2410
 
-### Changes in `/keys` endpoint
+## Changes in `/keys` endpoint
 
 - Tenant tokens: `apiKeyPrefix` has been renamed `apiKeyUid`.
 - It is no longer possible to update `actions`, `indexes`, or `expiresAt` after key creation. Only the `name` and `description` fields are updatable.
@@ -121,24 +121,24 @@ Done by @MarinPostma in #2410
 
 Done by @ManyTheFish in #2438, #2451, #2475, and #2474)
 
-### Changes in `/indexes/{uid}/settings` endpoints
+## Changes in `/indexes/{uid}/settings` endpoints
 
 The following changes only concern the HTTP verb associated with a given method.
 
-- The endpoint to update the global settings is now `PATCH /indexes/{indexUid}/settings`  instead of `POST`
-- The endpoint to update the typo tolerance settings is now `PATCH /indexes/{indexUid}/settings/typo-tolerance`  instead of `POST`
-- The endpoint to update the displayed attributes settings is now `PUT /indexes/{indexUid}/settings/displayed-attributes`  instead of `POST`
-- The endpoint to update the distinct attribute settings is now `PUT /indexes/{indexUid}/settings/distinct-attribute`  instead of `POST`
-- The endpoint to update the filterable attribute settings is now `PUT /indexes/{indexUid}/settings/filterable-attributes`  instead of `POST`
-- The endpoint to update the ranking rules settings is now `PUT /indexes/{indexUid}/settings/ranking-rules`  instead of `POST`
-- The endpoint to update the searchable attributes settings is now `PUT /indexes/{indexUid}/settings/searchable-attributes`  instead of `POST`
-- The endpoint to update the sortable attributes settings is now `PUT /indexes/{indexUid}/settings/sortable-attributes`  instead of `POST`
-- The endpoint to update the stop words settings is now `PUT /indexes/{indexUid}/settings/stop-words`  instead of `POST`
-- The endpoint to update the synonyms settings is now `PUT /indexes/{indexUid}/settings/synonyms`  instead of `POST`
+- The endpoint to update the global settings is now `PATCH /indexes/{indexUid}/settings` instead of `POST`
+- The endpoint to update the typo tolerance settings is now `PATCH /indexes/{indexUid}/settings/typo-tolerance` instead of `POST`
+- The endpoint to update the displayed attributes settings is now `PUT /indexes/{indexUid}/settings/displayed-attributes` instead of `POST`
+- The endpoint to update the distinct attribute settings is now `PUT /indexes/{indexUid}/settings/distinct-attribute` instead of `POST`
+- The endpoint to update the filterable attribute settings is now `PUT /indexes/{indexUid}/settings/filterable-attributes` instead of `POST`
+- The endpoint to update the ranking rules settings is now `PUT /indexes/{indexUid}/settings/ranking-rules` instead of `POST`
+- The endpoint to update the searchable attributes settings is now `PUT /indexes/{indexUid}/settings/searchable-attributes` instead of `POST`
+- The endpoint to update the sortable attributes settings is now `PUT /indexes/{indexUid}/settings/sortable-attributes` instead of `POST`
+- The endpoint to update the stop words settings is now `PUT /indexes/{indexUid}/settings/stop-words` instead of `POST`
+- The endpoint to update the synonyms settings is now `PUT /indexes/{indexUid}/settings/synonyms` instead of `POST`
 
 Done by @Kerollmops in #2452
 
-### Limit of 1000 for facet value
+## Limit of 1000 for facet value
 
 <!-- Currently in the RC, but can be changed -->
 For performance reasons, the limit of facet values is now 1000.
