Add new sections about new limits

--- a/meilisearch-release-changelogs/v0.28.0.md
+++ b/meilisearch-release-changelogs/v0.28.0.md
@@ -42,6 +42,46 @@ The whole core team is available to help you contribute. Feel free to ask for an
 
 Done by @ManyTheFish, @loiclec @gmourier, and @curquiza.
 
+## Add limit customizations
+
+### Limit of facet values
+
+When searching using the `facets` serach parameter, Meilisearch will now return a maximum of 100 different facet values per faceted attributes. This limit is customizable by using the `faceting` settings with the `/indexes/{uid}/settings/faceting` endpoint.
+
+To increase this limit to 1000:
+
+```bash
+curl \
+  -X PATCH 'http://localhost:7700/indexes/books/settings/faceting' \
+  -H 'Content-Type: application/json' \
+  --data-binary '{
+    "maxValuesPerFacet": 1000
+  }'
+```
+
+You can get the value by using the HTTP `GET` method on this endpoint, or reset this value using the `DELETE` method.
+
+Done by @Kerollmops in meilisearch/milli#550 and #2494
+
+### Limit of retrievable documents during the search
+
+During the search, Meilisearch returns a maximum of 1000 documents, meaning the end-user can only access the 1000 more relevant documents when searching. This limit is now customizable by using the `pagination` settings with the `/indexes/{uid}/settings/pagination` endpoint.
+
+To increase this limit to 20000:
+
+```bash
+curl \
+  -X PATCH 'http://localhost:7700/indexes/books/settings/pagination' \
+  -H 'Content-Type: application/json' \
+  --data-binary '{
+    "limitedTo": 2000
+  }'
+```
+
+You can get the value by using the HTTP `GET` method on this endpoint, or reset this value using the `DELETE` method.
+
+Done by @Kerollmops in meilisearch/milli#550 and #2494
+
 # Breaking changes and improvement ⚠️
 
 <!-- The following line should only be put in the official release changelogs, not for the RC -->
@@ -138,12 +178,7 @@ The following changes only concern the HTTP verb associated with a given method.
 
 Done by @Kerollmops in #2452
 
-## Limit of 1000 for facet value
 
-<!-- Currently in the RC, but can be changed -->
-For performance reasons, the limit of facet values is now 1000.
-
-Done by Kerollmops in #2468 and meilisearch/milli#535
 
 # Other improvements 🔨
 
