--- a/meilisearch-release-changelogs/v0.28.0.md
+++ b/meilisearch-release-changelogs/v0.28.0.md
@@ -42,7 +42,7 @@ The whole core team is available to help you contribute. Feel free to ask for an
 
 Done by @ManyTheFish, @loiclec @gmourier, and @curquiza.
 
-## Add limit customizations
+## Customizable limits
 
 ### Limit of facet values
 
