--- a/meilisearch-release-changelogs/v0.28.0.md
+++ b/meilisearch-release-changelogs/v0.28.0.md
@@ -46,7 +46,9 @@ Done by @ManyTheFish, @loiclec @gmourier, and @curquiza.
 
 ### Limit of facet values
 
-When searching using the `facets` serach parameter, Meilisearch will now return a maximum of 100 different facet values per faceted attributes. This limit is customizable by using the `faceting` settings with the `/indexes/{uid}/settings/faceting` endpoint.
+When searching using the `facets` search parameter, Meilisearch will now return a maximum of 100 different facet values per faceted attribute.
+
+This default limit is customizable using the new `faceting` setting, accessible via the `/indexes/{uid}/settings/faceting` route.
 
 To increase this limit to 1000:
 
