--- a/meilisearch-release-changelogs/v0.28.0.md
+++ b/meilisearch-release-changelogs/v0.28.0.md
@@ -65,7 +65,7 @@ You can get the value by using the HTTP `GET` method on this endpoint, or reset 
 
 Done by @Kerollmops in meilisearch/milli#550 and #2494
 
-### Limit of retrievable documents during the search
+### Limit of documents returned by search
 
 During the search, Meilisearch returns a maximum of 1000 documents, meaning the end-user can only access the 1000 more relevant documents when searching. This limit is now customizable by using the `pagination` settings with the `/indexes/{uid}/settings/pagination` endpoint.
 
