--- a/meilisearch-release-changelogs/v0.28.0.md
+++ b/meilisearch-release-changelogs/v0.28.0.md
@@ -67,7 +67,9 @@ Done by @Kerollmops in meilisearch/milli#550 and #2494
 
 ### Limit of documents returned by search
 
-During the search, Meilisearch returns a maximum of 1000 documents, meaning the end-user can only access the 1000 more relevant documents when searching. This limit is now customizable by using the `pagination` settings with the `/indexes/{uid}/settings/pagination` endpoint.
+When making a search request, Meilisearch returns a maximum of 1000 documents: the documents deemed most relevant to the query.
+
+This default limit is now customizable using the `pagination` setting, accessible via the `/indexes/{uid}/settings/pagination` route.
 
 To increase this limit to 20000:
 
