--- a/meilisearch-release-changelogs/v0.28.0.md
+++ b/meilisearch-release-changelogs/v0.28.0.md
@@ -61,7 +61,7 @@ curl \
   }'
 ```
 
-You can get the value by using the HTTP `GET` method on this endpoint, or reset this value using the `DELETE` method.
+You can also get the value using the HTTP `GET` verb, or reset the value using the `DELETE` verb.
 
 Done by @Kerollmops in meilisearch/milli#550 and #2494
 
