Add PR about docker

--- a/meilisearch-release-changelogs/v0.28.0.md
+++ b/meilisearch-release-changelogs/v0.28.0.md
@@ -185,8 +185,6 @@ The following changes only concern the HTTP verb associated with a given method.
 
 Done by @Kerollmops in #2452
 
-
-
 # Other improvements 🔨
 
 - Geosearch: Support string type for `_geo`, `lat`, and `lng` fields (#2408 and meilisearch/milli#523) @irevoire
@@ -198,6 +196,7 @@ Done by @Kerollmops in #2452
 - Telemetry: handle the `X-Meilisearch-Client` header (#2374) @irevoire
 - Telemetry: send the analytics to `telemetry.meilisearch.com` instead of segment (#2429) @irevoire
 - Create custom error types for `TaskType`, `TaskStatus`, and `IndexUid` (#2460) @walterbm
+- Improve the Docker CIs (#2477 and #2491) @choznerol and @curquiza
 - Some internal changes (#2447, #2464, #2453, #2455) @MarinPostma @Kerollmops
 - Update dependencies (#2450) @Kerollmops
 - Add dump tests in CI (#2357) @irevoire
@@ -212,6 +211,6 @@ Done by @Kerollmops in #2452
 ----
 
 ❤️ Thanks again to our external contributors:
-- [Meilisearch](https://github.com/meilisearch/meilisearch): @0x0x1, @ryanrussel, @Thearas, and @walterbm
+- [Meilisearch](https://github.com/meilisearch/meilisearch): @0x0x1, @choznerol, @ryanrussel, @Thearas, and @walterbm
 - [Milli](https://github.com/meilisearch/milli): @matthias-wright
 - [Charabia](https://github.com/meilisearch/charabia): @benny-n
