--- a/meilisearch-release-changelogs/v0.28.0.md
+++ b/meilisearch-release-changelogs/v0.28.0.md
@@ -19,7 +19,7 @@ Done by @ManyTheFish (#2408)
 
 ## API key management: deterministic keys
 
-- It is now possible to create a deterministic `key` value by specifying a `uid` field at creation. `uid` is a `uuidv4`. If omitted, Meilisearch generates it.
+- It is now possible to create a deterministic `key` value by specifying a `uid` field at creation. `uid` value must be a UUID v4. If omitted, Meilisearch generates it.
 - Adds a `name` field: specify a human-readable `name` to make API key retrieval more convenient.
 - Introduces new actions to manage API keys (`keys.get`, `keys.create`, `keys.update`, `keys.delete`).
 - It is no longer possible to update an API key's `actions`, `indexes`, or `expiresAt` after creation.
