--- a/meilisearch-release-changelogs/v0.28.0.md
+++ b/meilisearch-release-changelogs/v0.28.0.md
@@ -192,6 +192,10 @@ Done by @Kerollmops in #2452
 - Remove the connection keep-alive timeout (#2471) @Thearas
 - Improve index uid validation upon API key creation (#2414) @pierre-l
 
+# Fixes 🐞
+
+- Fix filtering on documents with double or/and simple quote (#2500 and meilisearch/milli#552) @irevoire
+
 # Misc
 
 - Telemetry: handle the `X-Meilisearch-Client` header (#2374) @irevoire
