Add contributor PR in the release changelogs

--- a/meilisearch-release-changelogs/v0.28.0.md
+++ b/meilisearch-release-changelogs/v0.28.0.md
@@ -209,7 +209,7 @@ Done by @Kerollmops in #2452
 - Change Nelson path (#2347) @curquiza
 - Re-integrate Clippy in the CI (#2424) @irevoire
 - Fix typo in README (#2448) @ryanrussell
-- Fix typo in code base comments (#2459) @ryanrussel
+- Fix typo in code base comments (#2459, and #2508) @ryanrussel
 - Update url of `movies.json` in README (#2422) @0x0x1
 - Fix command in README (#2434) @0x0x1
 
