--- a/meilisearch-release-changelogs/v0.28.0.md
+++ b/meilisearch-release-changelogs/v0.28.0.md
@@ -194,7 +194,7 @@ Done by @Kerollmops in #2452
 
 # Fixes 🐞
 
-- Fix filtering on documents with double or/and simple quote (#2500 and meilisearch/milli#552) @irevoire
+- Fix filtering on documents with double and/or single quote characters (#2500 and meilisearch/milli#552) @irevoire
 
 # Misc
 
