--- a/meilisearch-release-changelogs/v0.28.0.md
+++ b/meilisearch-release-changelogs/v0.28.0.md
@@ -189,6 +189,7 @@ Done by @Kerollmops in #2452
 
 - Geosearch: Support string type for `_geo`, `lat`, and `lng` fields (#2408 and meilisearch/milli#523) @irevoire
 - Improve ranking rules error message (meilisearch/milli#536, #2468) @matthias-wright
+- Improve docker CI: push vX.Y tag (without patch) to Docker Hub (#2529) @janithpet
 - Remove the connection keep-alive timeout (#2471) @Thearas
 - Improve index uid validation upon API key creation (#2414) @pierre-l
 
@@ -216,6 +217,6 @@ Done by @Kerollmops in #2452
 ----
 
 ❤️ Thanks again to our external contributors:
-- [Meilisearch](https://github.com/meilisearch/meilisearch): @0x0x1, @choznerol, @pierre-l, @ryanrussel, @Thearas, and @walterbm
+- [Meilisearch](https://github.com/meilisearch/meilisearch): @0x0x1, @choznerol, @janithpet, @pierre-l, @ryanrussel, @Thearas, and @walterbm
 - [Milli](https://github.com/meilisearch/milli): @matthias-wright
 - [Charabia](https://github.com/meilisearch/charabia): @benny-n
