--- a/roadmaps/2022.md
+++ b/roadmaps/2022.md
@@ -104,6 +104,7 @@ Regarding this point, more details are available on the product team roadmap, bu
   - [ ] Fixing user pain points like pagination.
   - [ ] Improving the document deletion speed.
   - [ ] Adding really demanded features like multi-index search.
+- [ ] Start v0.30.0 implementation (content not planned yet)
 
 ### Misc
 
