Update after review

--- a/roadmaps/2022.md
+++ b/roadmaps/2022.md
@@ -85,29 +85,39 @@ Regarding this point, more details are available on the product team roadmap, bu
 
 ## Q3 2022
 
-### Team
-
-- [ ] Finish the recruitment process to hire a senior software engineer.
-- [ ] Onboard the new software engineer.
-- [ ] Adapt the team synchronization and rhythm according to the Product Squad (PS) freshly introduced by the product team.
+The core team has two main goals for this quarter: to improve the product and also include the future release of v1 in our decisions.
 
 ### Road to v1
 
-- [ ] Stabilize the auto-batching feature: this feature is activated by default and cannot be disabled.
-- [ ] Clean and stabilize the Meilisearch CLI.
+Since API stabilization has been done in v0.28.0, the core team is close to releasing v1. The following list still needs to be done:
 
-### Release
+- [ ] Stabilize the auto-batching feature: this feature works in a completely transparent way, thus making it not visible to the users.
+- [ ] Clean and stabilize the Meilisearch CLI.
+- [ ] Ensure the API key management feature is stabilized.
+
+v1 will not be released during Q3, but we hope to be able to release it by the end of the year or by the beginning of 2023.
+
+### Improve the Meilisearch product
+
+This part is tightly related to the product team and is mostly decided on their side via the Product Squads and user discussions.
 
 - [ ] Release v0.28.0 (11th July) containing the API stabilization. Handle the support and the user feedback following the massive breaking changes.
-- [ ] Ensure the API key management feature is stabilized.
 - [ ] Release v0.29.0 (September)
   - [ ] Fixing user pain points like pagination.
   - [ ] Improving the document deletion speed.
   - [ ] Adding really demanded features like multi-index search.
 - [ ] Start v0.30.0 implementation (content not planned yet)
 
+### Team
+
+- [ ] Finish the recruitment process to hire a senior software engineer.
+- [ ] Onboard the new software engineer.
+- [ ] Adapt the team synchronization and rhythm according to the Product Squad (PS) freshly introduced by the product team.
+
 ### Misc
 
 - [ ] Finish internship work on Jayson. Integrate it to one or two routes on the Meilisearch side.
 - [ ] Work with the devrel team to promote the contributions we need on the tokenizer side.
-- [ ] Keep investigating about indexation speed/crash issues we could improve
+- [ ] Keep improving indexation speed/crash
+  - [ ] by gathering user feedback and use-cases and creating benchmarks according to them: we'll ensure we succeeded or not the improvement.
+  - [ ] by keep investigating and trying new technical solutions on our side.
