--- a/meilisearch-release-changelogs/v0.28.0.md
+++ b/meilisearch-release-changelogs/v0.28.0.md
@@ -196,6 +196,7 @@ Done by @Kerollmops in #2452
 # Fixes 🐞
 
 - Fix filtering on documents with double and/or single quote characters (#2500 and meilisearch/milli#552) @irevoire
+- Fix behavior of `nbHits` with distinct attribute (#2546) @Kerollmops
 
 # Misc
 
