--- a/meilisearch-release-changelogs/v0.28.0.md
+++ b/meilisearch-release-changelogs/v0.28.0.md
@@ -78,7 +78,7 @@ curl \
   -X PATCH 'http://localhost:7700/indexes/books/settings/pagination' \
   -H 'Content-Type: application/json' \
   --data-binary '{
-    "limitedTo": 2000
+    "maxTotalHits": 2000
   }'
 ```
 
@@ -192,11 +192,11 @@ Done by @Kerollmops in #2452
 - Improve docker CI: push vX.Y tag (without patch) to Docker Hub (#2529) @janithpet
 - Remove the connection keep-alive timeout (#2471) @Thearas
 - Improve index uid validation upon API key creation (#2414) @pierre-l
+- Improve `estimatedTotalHits` behavior with distinct attribute (#2546) @Kerollmops
 
 # Fixes 🐞
 
 - Fix filtering on documents with double and/or single quote characters (#2500 and meilisearch/milli#552) @irevoire
-- Fix behavior of `nbHits` with distinct attribute (#2546) @Kerollmops
 
 # Misc
 
