--- a/meilisearch-release-changelogs/v0.28.0.md
+++ b/meilisearch-release-changelogs/v0.28.0.md
@@ -150,7 +150,7 @@ Done by Kerollmops in #2399 and #2445.
 - Dump tasks are placed at the end of the task queue, but processed in priority.
   - In other words, a dump will run as soon as the current task is finished processing.
   - The dump's `uid` will reflect when it was enqueued in relation to the other tasks, not when it was processed.
-- `POST /dumps` now returns `202` like any other asynchronous operation (e.g. index creation, document addition...
+- `POST /dumps` now returns `202` like any other asynchronous operation (e.g. index creation, document addition...)
 - The `GET /dumps/:dump_uid/status` endpoint has been removed. It can be replaced by `GET /tasks?type=dumpCreation`.
 - The `dump_already_processing` error has been removed since dumps can now be enqueued.
 
