Add mini-dashboard PR

--- a/meilisearch-release-changelogs/v0.28.0.md
+++ b/meilisearch-release-changelogs/v0.28.0.md
@@ -208,6 +208,7 @@ Done by @Kerollmops in #2452
 - Update dependencies (#2450) @Kerollmops
 - Add dump tests in CI (#2357) @irevoire
 - Deny warnings in CI (#2339) @MarinPostma
+- Update mini-dashboard for v0.28.0 (#2587) @mdubus @bidoubiwa
 - Change Nelson path (#2347) @curquiza
 - Re-integrate Clippy in the CI (#2424) @irevoire
 - Fix typo in README (#2448) @ryanrussell
