Add link for new pagination guide

--- a/meilisearch-release-changelogs/v0.28.0.md
+++ b/meilisearch-release-changelogs/v0.28.0.md
@@ -102,7 +102,7 @@ For most of the following changes, if you use [one of our SDKs](https://docs.mei
 
 ## Changes in `/indexes/{uid}/search` endpoint
 
-- `nbHits` is renamed `estimatedTotalHits`. Some users were confused by the old name and used it for their pagination, which we discourage. Please check out this [fresh new guide]() to learn how to paginate with Meilisearch without using `nbHits`.
+- `nbHits` is renamed `estimatedTotalHits`. Some users were confused by the old name and used it for their pagination, which we discourage. Please check out this [fresh new guide](https://docs.meilisearch.com/learn/advanced/pagination.html) to learn how to paginate with Meilisearch without using `nbHits`.
 - The `facetsDistribution` search parameter is renamed `facets`
 - The `facetsDistribution` field in the response body is renamed `facetDistribution`
 - The `matches` search parameter is renamed `showMatchesPosition`
