--- a/meilisearch-release-changelogs/v0.28.0.md
+++ b/meilisearch-release-changelogs/v0.28.0.md
@@ -221,13 +221,13 @@ Done by @Kerollmops in #2452
 - Change Nelson path (#2347) @curquiza
 - Re-integrate Clippy in the CI (#2424) @irevoire
 - Fix typo in README (#2448) @ryanrussell
-- Fix typo in code base comments (#2459, and #2508) @ryanrussel
+- Fix typo in code base comments (#2459, and #2508) @ryanrussell
 - Update url of `movies.json` in README (#2422) @0x0x1
 - Fix command in README (#2434) @0x0x1
 
 ----
 
 ❤️ Thanks again to our external contributors:
-- [Meilisearch](https://github.com/meilisearch/meilisearch): @0x0x1, @choznerol, @janithpet, @pierre-l, @ryanrussel, @Thearas, and @walterbm
+- [Meilisearch](https://github.com/meilisearch/meilisearch): @0x0x1, @choznerol, @janithpet, @pierre-l, @ryanrussell, @Thearas, and @walterbm
 - [Milli](https://github.com/meilisearch/milli): @matthias-wright
 - [Charabia](https://github.com/meilisearch/charabia): @benny-n
