--- a/meilisearch-release-changelog/v0.29.0.md
+++ b/meilisearch-release-changelog/v0.29.0.md
@@ -1,7 +1,7 @@
 # v0.29.0 release changelogs
 
-In this release, we integrate a demanded feature: the possibility to require that all query terms are present in search results. Some users have been stuck in the pre-0.21 versions due to that.
-We also made a lot of improvements regarding the indexing speed!
+In this release, we integrated a demanded feature: all query terms being present in search results. Some users have been stuck in the pre-0.21 versions because of this.
+We also improved the indexing speed
 
 <!-- The following line should NOT be put in the official release changelogs -->
 ⚠️ Since this is a release candidate (RC), the official documentation is not updated yet, but will be ready for the official v0.29.0 release. The work-in-progress documentation is available [here]().
