--- a/meilisearch-release-changelog/v0.29.0.md
+++ b/meilisearch-release-changelog/v0.29.0.md
@@ -10,7 +10,7 @@ We also improved the indexing speed
 
 ## Customize matching strategy
 
-It's now possible to control ow Meilisearch matches documents during the search by choosing to return only documents containing **all** the query words.
+It's now possible to control how Meilisearch matches documents during search by choosing to return only documents containing **all** the query words.
 
 ### How to activate it?
 
