--- a/meilisearch-release-changelog/v0.29.0.md
+++ b/meilisearch-release-changelog/v0.29.0.md
@@ -44,7 +44,7 @@ Made by our dear contributor @aFluffyHotdog and by @ManyTheFish in meilisearch/c
 
 We improved the indexing speed, especially for `filterableAttributes` and document update and deletion.
 
-For people wanting information about the main improvements, check out the following issues: meilisearch/product#513 and meilisearch/product#520.
+For more information on the main improvements, check out the following issues: meilisearch/product#513 and meilisearch/product#520.
 
 Made by @loiclec and @irevoire in #2689, #2690, meilisearch/milli#607, meilisearch/milli#606, meilisearch/milli#587, meilisearch/milli#557,meilisearch/milli#579, and meilisearch/milli#590.
 
