--- a/meilisearch-release-changelog/v0.29.0.md
+++ b/meilisearch-release-changelog/v0.29.0.md
@@ -73,7 +73,7 @@ Made by @loiclec in #2636, meilisearch/milli#596, and meilisearch/milli#556.
 
 When managing [keys](https://docs.meilisearch.com/learn/security/master_api_keys.html#protecting-a-meilisearch-instance), the `*` helper can now be used to express a set of actions in the `actions` array.
 
-For example, instead of specifying `indexes.create`, `indexes.get`, `indexes.update`, `indexes.delete`; it's now possible to specify `indexes.*`.
+For example, instead of specifying `indexes.create`, `indexes.get`, `indexes.update`, `indexes.delete`; you can now use `indexes.*`.
 
 Made by our dear contributors @Mcdostone and @phdavis1027 in #2080 and #2579.
 
