--- a/meilisearch-release-changelog/v0.29.0.md
+++ b/meilisearch-release-changelog/v0.29.0.md
@@ -79,7 +79,7 @@ Made by our dear contributors @Mcdostone and @phdavis1027 in #2080 and #2579.
 
 ## Meilisearch metrics - Beta
 
-We integrated [Prometheus](https://prometheus.io/) formatted metrics endpoint.
+We integrated a [Prometheus](https://prometheus.io/) formatted metrics endpoint.
 
 You can activate it by launching Meilisearch using `--enable-metrics-route` (or setting the `MEILI_ENABLE_METRICS_ROUTE` environment variable) and calling the `GET /metrics` route.
 
