Update following prometheus decision

--- a/meilisearch-release-changelog/v0.29.0.md
+++ b/meilisearch-release-changelog/v0.29.0.md
@@ -77,16 +77,6 @@ For example, instead of specifying `indexes.create`, `indexes.get`, `indexes.upd
 
 Made by our dear contributors @Mcdostone and @phdavis1027 in #2080 and #2579.
 
-## Meilisearch metrics - Beta
-
-We integrated a [Prometheus](https://prometheus.io/) formatted metrics endpoint.
-
-You can activate it by launching Meilisearch using `--enable-metrics-route` (or setting the `MEILI_ENABLE_METRICS_ROUTE` environment variable) and calling the `GET /metrics` route.
-
-This is a beta feature for now. We first need to ensure the [current metrics we provide are useful](https://github.com/meilisearch/product/issues/496) before making it stable.
-
-Made by @pavo-tusker in #2657.
-
 # Behavior changes ⚠️
 
 ## Auto-batching
@@ -121,6 +111,7 @@ Made by @loiclec in #2636, and meilisearch/milli#596.
 * Completely rework the README (#2504) @CaroFG, @curquiza, @guimachiavelli, and @gmourier
 * Add analytics to the `/stats` routes (#2674) @irevoire
 * Update link to Cloud beta form (#2625) @davelarkan
+* Internal feature only: integrate `/metrics` route (#2657) @pavo-tusker
 * Fix typo (#2508, #2517, #2556) @ryanrussell
 * Use nightly for `cargo fmt` in CI (#2519) @curquiza
 * Fix content of dump/assets for testing (#2544) @loiclec
