--- a/meilisearch-release-changelog/v0.29.0.md
+++ b/meilisearch-release-changelog/v0.29.0.md
@@ -1,10 +1,13 @@
 # v0.29.0 release changelogs
 
+<!-- The following line should NOT be put in the official release changelogs -->
+⚠️ Since this is a release candidate (RC), we do NOT recommend using this version in production. This is only for test purposes. Please, feel free to [report bugs](https://github.com/meilisearch/meilisearch/issues/new/choose) and [give feedback about the new feature introductions](https://github.com/meilisearch/product/discussions).
+
 In this release, we integrated a demanded feature: all query terms being present in search results. Some users have been stuck in the pre-0.21 versions because of this.
 We also improved the indexing speed
 
 <!-- The following line should NOT be put in the official release changelogs -->
-⚠️ Since this is a release candidate (RC), the official documentation is not updated yet, but will be ready for the official v0.29.0 release. The work-in-progress documentation is available [here]().
+📖 the official documentation is not updated yet, but will be ready for the official v0.29.0 release. The work-in-progress documentation is available [here]().
 
 # New features and improvements 🔥
 
