--- a/meilisearch-release-changelog/v0.29.0.md
+++ b/meilisearch-release-changelog/v0.29.0.md
@@ -6,7 +6,7 @@
 In this release, we integrated a demanded feature: requiring all query terms to be present in search results. Some users have been stuck in the pre-0.21 versions because of this.
 We also improved the indexing speed
 
-🧰 Most of the integrations (SDKs, clients, libraries) you use will be compatible with this version in the 4 next hours following the release. Sometimes it can take longer, maybe 24h, depending on some issues we can encounter during the release.
+🧰 Most integrations (SDKs, clients, libraries) will be compatible with this version within four hours of the release. Sometimes it can take longer, maybe 24 hours, depending on the issues we can encounter during the release.
 However, here is the exhaustive list of **non-compatible** integrations with v0.29.0:
 - [meilisearch-dart](https://github.com/meilisearch/meilisearch-dart) and [meilisearch-swift](https://github.com/meilisearch/meilisearch-swift): you can use it with v0.29.0 but the [`matchingStrategy` feature](#customize-matching-strategy) is not integrated yet. If you really need it, let us know, and of course, contributions are welcome!
 - [meilisearch-java](https://github.com/meilisearch/meilisearch-java): our team is still working on refactoring the code, and the SDK cannot be used with v0.29.0. Follow the repository to know when it will be compatible.
