--- a/meilisearch-release-changelog/v0.29.0.md
+++ b/meilisearch-release-changelog/v0.29.0.md
@@ -8,8 +8,8 @@ We also improved the indexing speed
 
 🧰 Most integrations (SDKs, clients, libraries) will be compatible with this version within four hours of the release. Sometimes it can take longer, maybe 24 hours, depending on the issues we can encounter during the release.
 However, here is the exhaustive list of **non-compatible** integrations with v0.29.0:
-- [meilisearch-dart](https://github.com/meilisearch/meilisearch-dart) and [meilisearch-swift](https://github.com/meilisearch/meilisearch-swift): you can use it with v0.29.0 but the [`matchingStrategy` feature](#customize-matching-strategy) is not integrated yet. If you really need it, let us know, and of course, contributions are welcome!
-- [meilisearch-java](https://github.com/meilisearch/meilisearch-java): our team is still working on refactoring the code, and the SDK cannot be used with v0.29.0. Follow the repository to know when it will be compatible.
+- [meilisearch-dart](https://github.com/meilisearch/meilisearch-dart) and [meilisearch-swift](https://github.com/meilisearch/meilisearch-swift): You can use it with v0.29.0 but the [`matchingStrategy` feature](#customize-matching-strategy) is not integrated yet. Let us know if you really need it, and contributions are always welcome!
+- [meilisearch-java](https://github.com/meilisearch/meilisearch-java): Our team is still working on refactoring the code, and the SDK cannot be used with v0.29.0. Follow the repository to know when it will be compatible.
 
 <!-- The following line should NOT be put in the official release changelogs -->
 📖 the official documentation is not updated yet, but will be ready for the official v0.29.0 release. The work-in-progress documentation is available [here]().
