--- a/meilisearch-release-changelog/v0.29.0.md
+++ b/meilisearch-release-changelog/v0.29.0.md
@@ -12,7 +12,7 @@ However, here is the exhaustive list of **non-compatible** integrations with v0.
 - [meilisearch-java](https://github.com/meilisearch/meilisearch-java): Our team is still working on refactoring the code, and the SDK cannot be used with v0.29.0. Follow the repository to know when it will be compatible.
 
 <!-- The following line should NOT be put in the official release changelogs -->
-📖 the official documentation is not updated yet, but will be ready for the official v0.29.0 release. The work-in-progress documentation is available [here]().
+📖 The official documentation is not updated yet, but will be ready for the official v0.29.0 release. The work-in-progress documentation is available [here]().
 
 # New features and improvements 🔥
 
