--- a/meilisearch-release-changelog/v0.29.0.md
+++ b/meilisearch-release-changelog/v0.29.0.md
@@ -3,8 +3,7 @@
 <!-- The following line should NOT be put in the official release changelogs -->
 ⚠️ Since this is a release candidate (RC), we do NOT recommend using this version in production. This is only for test purposes. Please, feel free to [report bugs](https://github.com/meilisearch/meilisearch/issues/new/choose) and [give feedback about the new feature introductions](https://github.com/meilisearch/product/discussions).
 
-In this release, we integrated a demanded feature: requiring all query terms to be present in search results. Some users have been stuck in the pre-0.21 versions because of this.
-We also improved the indexing speed
+This release includes a much requested feature: an option to require all query terms to be present in search results. The absence of this feature prevented some users from upgrading to newer Meilisearch versions. Additionally, v0.29 contains several indexing speed improvements.
 
 🧰 Most integrations (SDKs, clients, libraries) will be compatible with this version within four hours of the release. Sometimes it can take longer, maybe 24 hours, depending on the issues we can encounter during the release.
 However, here is the exhaustive list of **non-compatible** integrations with v0.29.0:
